# FastSim

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  circuit.py  circuit_comparison_results.json  environment.yaml  example_usage.py  gates_config.json  heisenberg_vqe_results.json  hi_circuit_results.json  pyproject.toml  run_heisenberg_vqe.py  setup.py  test_12_16_qubit_analysis.py  test_12_16_qubit_vqe.py  test_16_qubit_lightweight.py  test_20qubit_paper_heisenberg.py  test_gradient.py  test_hi_circuit.py  test_pennylane_vqe.py  test_vqe_initialization.py  vqe_sampling_4q.json  vqe_sampling_8q.json
benchmarks/: README.md  bench_statevector_vs_custatevec.py  circuit_generator.py  run_custatevec.py  run_fastsim.py  verify_consistency.py
configs/: gates_config.json
fastsim/: __init__.py  circuit.py  execute_circuit.py  execute_vqe.py  hamiltonian.py  sampling.py  state.py  tool.py  vqe.py
fastsim.egg-info/: PKG-INFO
run/: README.md  demo_pqc_structures.py  energy_scaling_analysis.json  heisenberg_vqe_results.json  openfermion_comparison_results.json  paper_comparison_analysis.json  quasi_1d_afm_vqe_quick_results.json  run_heisenberg_vqe.py  run_quasi_1d_afm_vqe.py  run_quasi_1d_afm_vqe_quick.py  run_quasi_1d_afm_vqe_test.py  run_vqe_sampling.py  standard_vqe_sampling.py  submit_circuit.sh  test_4N_afm_with_random_restart.py  test_final_state_sampling.py  test_vqe_sampling_expectation.py  vqe_sampling_6q.json  vqe_sampling_runner.py
src/: abs_circuit.py  circuit.py  execute_vqe.py  hamiltonian.py  sampling.py  state.py  tensor_network.py  tensor_ops.py  vqe.py  vqe_sampler.py
tests/: conftest.py  debug_hamiltonian.py  lanczos.py  test_4N_afm_with_new_pqc.py  test_4N_afm_with_random_restart.py  test_4n_ground_state_product.py  test_abs_circuit.py  test_afm_vqe.py  test_circuit.py  test_circuit_formats.py  test_final_state_sampling.py  test_gradient.py  test_nn.py  test_random_restart_vqe.py  test_state.py  test_vqe.py  test_vqe_sampling.py  test_vqe_state_storage.py  (+1 more)
(+3 files in other folders)
